// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [06][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 6,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [06][WebRip][HEVC_AAC][繁日内嵌] 1`] = `
{
  "episode": {
    "number": 6,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [07][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [07][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [08][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [08][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [09][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [09][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [10][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [10][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [11][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大师 闪耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [11][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "偶像大师 闪耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大師 閃耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [07][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "偶像大師 閃耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大師 閃耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [08][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "偶像大師 閃耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大師 閃耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [09][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "偶像大師 閃耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大師 閃耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [10][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "偶像大師 閃耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 偶像大師 閃耀色彩 第二季 / THE IDOLM@STER SHINY COLORS S2 [11][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "偶像大師 閃耀色彩 第二季",
  "titles": [
    "THE IDOLM@STER SHINY COLORS S2",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite [07][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "地。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite [07][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "地。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite [08][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "地。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite [08][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "地。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite [09][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "地。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite [09][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "地。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite [10][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "地。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite [10][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "地。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite [11][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "地。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-关于地球的运动- / Chi. Chikyuu no Undou ni Tsuite [11][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "地。-关于地球的运动-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-關於地球的運動- / Chi. Chikyuu no Undou ni Tsuite [07][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 7,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "地。-關於地球的運動-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-關於地球的運動- / Chi. Chikyuu no Undou ni Tsuite [08][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "地。-關於地球的運動-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-關於地球的運動- / Chi. Chikyuu no Undou ni Tsuite [09][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "地。-關於地球的運動-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-關於地球的運動- / Chi. Chikyuu no Undou ni Tsuite [10][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "地。-關於地球的運動-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 地。-關於地球的運動- / Chi. Chikyuu no Undou ni Tsuite [11][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 11,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "地。-關於地球的運動-",
  "titles": [
    "Chi. Chikyuu no Undou ni Tsuite",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 漩涡 / Uzumaki [01-04 修正合集][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episodeRange": {
    "from": 1,
    "to": 4,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "漩涡",
  "titles": [
    "Uzumaki",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 漩涡 / Uzumaki [01-04 修正合集][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episodeRange": {
    "from": 1,
    "to": 4,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "漩涡",
  "titles": [
    "Uzumaki",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 漩渦 / Uzumaki [01-04 修正合集][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episodeRange": {
    "from": 1,
    "to": 4,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "漩渦",
  "titles": [
    "Uzumaki",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 賽馬娘 第三季 / Uma Musume Pretty Derby Season 3 [12][WebRip][HEVC_AAC][繁體内嵌] 1`] = `
{
  "episode": {
    "number": 12,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁體",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "賽馬娘 第三季",
  "titles": [
    "Uma Musume Pretty Derby Season 3",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 賽馬娘 第三季 / Uma Musume Pretty Derby Season 3 [13][WebRip][HEVC_AAC][繁體内嵌] 1`] = `
{
  "episode": {
    "number": 13,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁體",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "賽馬娘 第三季",
  "titles": [
    "Uma Musume Pretty Derby Season 3",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 赛马娘 第三季 / Uma Musume Pretty Derby Season 3 [12][WebRip][HEVC_AAC][简体内嵌] 1`] = `
{
  "episode": {
    "number": 12,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简体",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "赛马娘 第三季",
  "titles": [
    "Uma Musume Pretty Derby Season 3",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 赛马娘 第三季 / Uma Musume Pretty Derby Season 3 [12][WebRip][HEVC_AAC][简繁内封] 1`] = `
{
  "episode": {
    "number": 12,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "赛马娘 第三季",
  "titles": [
    "Uma Musume Pretty Derby Season 3",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 赛马娘 第三季 / Uma Musume Pretty Derby Season 3 [13][WebRip][HEVC_AAC][简体内嵌] 1`] = `
{
  "episode": {
    "number": 13,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简体",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "赛马娘 第三季",
  "titles": [
    "Uma Musume Pretty Derby Season 3",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 赛马娘 第三季 / Uma Musume Pretty Derby Season 3 [13][WebRip][HEVC_AAC][简繁内封] 1`] = `
{
  "episode": {
    "number": 13,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "赛马娘 第三季",
  "titles": [
    "Uma Musume Pretty Derby Season 3",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 赛马娘剧场版 新时代之门 / 新时代之扉 / Uma Musume Pretty Derby Beginning of a New Era [Movie][WebRip][HEVC_AAC][简中内嵌] 1`] = `
{
  "fansub": {
    "name": "北宇治字幕组",
  },
  "tags": [],
  "title": "赛马娘剧场版 新时代之门",
  "titles": [
    "新时代之扉",
    "Uma Musume Pretty Derby Beginning of a New Era[Movie][WebRip][HEVC_AAC][简中内嵌]",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 青之箱 / 蓝箱 / Ao no Hako / Blue Box [08][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "青之箱",
  "titles": [
    "蓝箱",
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 青之箱 / 蓝箱 / Ao no Hako / Blue Box [09][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "青之箱",
  "titles": [
    "蓝箱",
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 青之箱 / 蓝箱 / Ao no Hako / Blue Box [10][WebRip][HEVC_AAC][简日内嵌] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简日",
  "source": "WebRip",
  "subtitles": "内嵌",
  "tags": [],
  "title": "青之箱",
  "titles": [
    "蓝箱",
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 青之箱 / 青春之箱 / 青春盒子 / 蓝箱 / Ao no Hako / Blue Box [08][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "青之箱",
  "titles": [
    "青春之箱",
    "青春盒子",
    "蓝箱",
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 青之箱 / 青春之箱 / 青春盒子 / 蓝箱 / Ao no Hako / Blue Box [09][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "青之箱",
  "titles": [
    "青春之箱",
    "青春盒子",
    "蓝箱",
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 青之箱 / 青春之箱 / 青春盒子 / 蓝箱 / Ao no Hako / Blue Box [10][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "青之箱",
  "titles": [
    "青春之箱",
    "青春盒子",
    "蓝箱",
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 青之箱 / 青春之箱 / 青春盒子 / 蓝箱 / Ao no Hako / Blue Box [10v2][WebRip][HEVC_AAC][简繁日内封] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "简繁日",
  "source": "WebRip",
  "subtitles": "内封",
  "tags": [],
  "title": "青之箱",
  "titles": [
    "青春之箱",
    "青春盒子",
    "蓝箱",
    "Ao no Hako",
    "Blue Box",
  ],
  "version": 2,
}
`;

exports[`Kitauji > [北宇治字幕组] 青春之箱 / 青春盒子 / Ao no Hako / Blue Box [08][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 8,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "青春之箱",
  "titles": [
    "青春盒子",
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 青春之箱 / 青春盒子 / Ao no Hako / Blue Box [09][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 9,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "青春之箱",
  "titles": [
    "青春盒子",
    "Ao no Hako",
    "Blue Box",
  ],
}
`;

exports[`Kitauji > [北宇治字幕组] 青春之箱 / 青春盒子 / Ao no Hako / Blue Box [10][WebRip][HEVC_AAC][繁日內嵌] 1`] = `
{
  "episode": {
    "number": 10,
  },
  "fansub": {
    "name": "北宇治字幕组",
  },
  "file": {
    "audio": {
      "term": "AAC",
    },
    "video": {
      "term": "HEVC",
    },
  },
  "language": "繁日",
  "source": "WebRip",
  "subtitles": "內嵌",
  "tags": [],
  "title": "青春之箱",
  "titles": [
    "青春盒子",
    "Ao no Hako",
    "Blue Box",
  ],
}
`;
